/*
 * $Id: ChangeLog,v 1.2715 2004/04/02 04:30:47 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-02 05:30 UTC-0500 Sylvain Robert <s.robert/at/videotron.ca>
  * source/rtl/filesys.c
    ! Fixed R/T error when trying to open a DBF in Exclusive mode and
      a sharing violation occur (_doserrno==32) by removing special error
      translation for MSVC in hb_fsSetError()
  * hb_fsOpen() set the error to _doserrno if possible for MSVC

2004-04-01 20:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvmpub.h
    * Removed Member <itemsbase> in favor of NEW Member <pBaseArray>

  * source/vm/arrays.c
  * source/vm/hvm.c
    ! Fixed creation of BYREF items into Arrays to use new pBaseArray Member.

  * source/vm/itemapi.c
    ! Fixed de-referencing of of BYREF items into Arrays to use new pBaseArray Member.
    + Added logic detect and generate R/T Error upon refernce into array being out of bound.

  * source/vm/garbage.c
    + Added logic to Mark the Base Array of a BYREF Item in Sweep Scan.

  * source/vm/fastitem.c
    * Removed some redundant ()

  /* The above fixes critical GPF traps related to BYREF item pointing into an Array Element. */

2004-04-02 03:28 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
  * source/rtl/bkgtsks.c
    * warnings fixed

2004-04-02 02:42 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/contrib/rdd_ads/adsfunc.c
    * warnings fixed

2004-04-02 00:00 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/contrib/rdd_ads/adsfunc.c
  * xharbour/include/simplex.c
  * xharbour/source/rtl/hbserv.c
  * xharbour/source/rtl/hbxml.c
  * xharbour/source/rtl/inkey.c
  * xharbour/source/rtl/readline.c
  * xharbour/source/rtl/regex.c
  * xharbour/source/vm/arrays.c